--- a/src/DBoW2.cmake.in
+++ b/src/DBoW2.cmake.in
@@ -1,9 +1,9 @@
-FIND_LIBRARY(DBoW2_LIBRARY DBoW2
+FIND_LIBRARY(dbow2_LIBRARY dbow2
     PATHS @CMAKE_INSTALL_PREFIX@/lib
 )
-FIND_PATH(DBoW2_INCLUDE_DIR DBoW2Config.cmake
+FIND_PATH(dbow2_INCLUDE_DIR dbow2Config.cmake
     PATHS @CMAKE_INSTALL_PREFIX@/include/@PROJECT_NAME@ 
 )
-SET(DBoW2_LIBRARIES ${DBoW2_LIBRARY})
-SET(DBoW2_LIBS ${DBoW2_LIBRARY})
-SET(DBoW2_INCLUDE_DIRS ${DBoW2_INCLUDE_DIR})
+SET(dbow2_LIBRARIES ${dbow2_LIBRARY})
+SET(dbow2_LIBS ${dbow2_LIBRARY})
+SET(dbow2_INCLUDE_DIRS ${dbow2_INCLUDE_DIR})
